<resources>
    <string name="app_name">Assignment Networking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Amazing Wallpaper in your way</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Latest</string>
    <string name="menu_gallery">Category</string>
    <string name="menu_slideshow">Gifs</string>
    <string name="menu_tools">Myfavories</string>
    <string name="menu_tools2">Rate app</string>
    <string name="menu_tools3">More app</string>
    <string name="menu_tools4">About us</string>
    <string name="menu_share">Setting</string>
    <string name="menu_send">Privacy police</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
